removed overflow issue on landing section

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
 }
 
 body {
+     overflow-x: hidden;
      background: #e0e0e0;
      font-family: sans-serif;
 }
@@ -52,6 +53,10 @@ body {
      background: #e0e0e0;
      transition: all .5s ease-in-out;
      box-shadow:  20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+}
+
+.timeline-section .timeline-item:hover {
+     box-shadow: inset 20px 20px 60px #bebebe, inset -20px -20px 60px #ffffff;
 }
 
 .timeline-section .timeline-item h2 {
